# AI-Interview-system

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
modules/: expression_detection.py  eye_contact.py  face_landmarks.py  head_pose.py
