[project]
name = "interview-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
    "xgboost>=3.2.0",
]
